--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("styles/header.css");
 @import url("styles/banner.css");
+@import url("styles/carrossel.css");
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
@@ -14,4 +15,3 @@ body{
     font-size: 16px;
     font-weight: 400;
 }
-
